--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/InterfazPrincipal.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/InterfazPrincipal.form
@@ -113,6 +113,9 @@
           <Properties>
             <Property name="text" type="java.lang.String" value="VER TORNEOS EN CURSO"/>
           </Properties>
+          <Events>
+            <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BotonVerTorneosActionPerformed"/>
+          </Events>
         </Component>
         <Component class="javax.swing.JLabel" name="Logo">
           <Properties>
