--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/EditarTorneoFutbol.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/EditarTorneoFutbol.form
@@ -164,17 +164,12 @@
                       <Component id="ComboBorrar" min="-2" pref="119" max="-2" attributes="0"/>
                   </Group>
                   <Group type="103" groupAlignment="1" max="-2" attributes="0">
-                      <Group type="103" groupAlignment="0" attributes="0">
-                          <Group type="102" alignment="1" attributes="0">
-                              <EmptySpace min="-2" pref="371" max="-2" attributes="0"/>
-                              <Group type="103" groupAlignment="1" attributes="0">
-                                  <Component id="confirmarCancelar" min="-2" max="-2" attributes="0"/>
-                                  <Component id="ConfirmarBorrar" min="-2" max="-2" attributes="0"/>
-                              </Group>
-                          </Group>
-                          <Group type="102" alignment="0" attributes="0">
-                              <EmptySpace min="-2" pref="371" max="-2" attributes="0"/>
-                              <Component id="GuardarCambios" min="-2" max="-2" attributes="0"/>
+                      <Group type="102" attributes="0">
+                          <EmptySpace min="-2" pref="304" max="-2" attributes="0"/>
+                          <Group type="103" groupAlignment="0" attributes="0">
+                              <Component id="confirmarCancelar" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="ConfirmarBorrar" alignment="1" min="-2" max="-2" attributes="0"/>
+                              <Component id="GuardarCambios" alignment="0" min="-2" max="-2" attributes="0"/>
                           </Group>
                       </Group>
                       <Group type="102" alignment="1" attributes="0">
@@ -209,9 +204,9 @@
                       <Component id="EditarAño" alignment="3" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace min="-2" pref="97" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="3" attributes="0">
-                      <Component id="ConfirmarBorrar" alignment="3" min="-2" max="-2" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
                       <Component id="ComboBorrar" alignment="0" min="-2" max="-2" attributes="0"/>
+                      <Component id="ConfirmarBorrar" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace pref="64" max="32767" attributes="0"/>
                   <Component id="GuardarCambios" min="-2" max="-2" attributes="0"/>
