--- a/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/InterfazPrincipal.form
+++ b/mavenproject1/src/main/java/com/mycompany/mavenproject1/Ventanas/InterfazPrincipal.form
@@ -40,9 +40,9 @@
           <Group type="103" groupAlignment="0" attributes="0">
               <Group type="102" alignment="0" attributes="0">
                   <EmptySpace min="-2" pref="26" max="-2" attributes="0"/>
-                  <Group type="103" groupAlignment="0" max="-2" attributes="0">
-                      <Component id="BotonGuardarDatos" pref="126" max="32767" attributes="0"/>
-                      <Component id="BotonSalir" max="32767" attributes="0"/>
+                  <Group type="103" groupAlignment="0" attributes="0">
+                      <Component id="BotonSalir" min="-2" pref="126" max="-2" attributes="0"/>
+                      <Component id="BotonGuardarDatos" min="-2" max="-2" attributes="0"/>
                   </Group>
                   <EmptySpace max="32767" attributes="0"/>
                   <Component id="BotonCargarDatos" min="-2" max="-2" attributes="0"/>
